<resources>
    <string name="app_name">JuxtaREM</string>
    <string name="action_share_task">Share</string>
    <string name="action_see_profile">Profile</string>
    <string name="action_use_points">Use Points</string>
    <string name="action_see_snoozed_tasks">Snoozed Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="password_code">Code</string>
    <string name="password">Password</string>
    <string name="input_email">Email</string>
    <string name="create_new_account">No account yet? Create one</string>
    <string name="action_login">Login</string>
    <string name="delimiter">Delimiter</string>
    <string name="gplus_sign_in">Sign in with Google+</string>
    <string name="action_see_signout_tasks">Sign out</string>

    <string name="facebook_app_id">2102852096613774</string>
    <string name="fb_login_protocol_scheme">fb2102852096613774</string>



    <string name="welcome">Welcome!</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="permissions">Permissions</string>
    <string name="label_facebook_login">Facebook Login</string>
    <string name="label_account_kit_login">Account Kit Login</string>
    <string name="de_authorize_app">De-authorize App</string>
    <string name="failed_to_deauth">"failed to deauthorize app %1s"</string>
    <string name="app_not_logged_in">App not logged in</string>
    <string name="success">SUCCESS</string>
    <string name="cancel">CANCEL</string>
    <string name="error">ERROR</string>
</resources>