<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.android.sunshine.DetailActivity">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:title="@string/action_share_task"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_see_profile"
        android:orderInCategory="100"
        android:title="@string/action_see_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_use_points"
        android:orderInCategory="100"
        android:title="@string/action_use_points"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_snoozed_tasks"
        android:orderInCategory="100"
        android:title="@string/action_see_snoozed_tasks"
        app:showAsAction="never" />
</menu>