<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.facebook.login.widget.ProfilePictureView
            android:id="@+id/user_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            facebook:com_facebook_preset_size="small" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/deauth"
            android:layout_width="182dip"
            android:layout_height="wrap_content"
            android:text="@string/de_authorize_app"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/perms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permissions"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textSize="12sp" />

    </LinearLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

</LinearLayout>